# climate-risk-platform

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  env.example  setup.bat  setup.sh
backend/: Dockerfile  minimal_server.py  pyproject.toml  simple_test.py  start_server.py  test_server.py
backend/app/: __init__.py  config.py  main.py
backend/app/db/: database.py  models.py
backend/app/geo/: __init__.py  grid.py  tiles.py
backend/app/routes/: admin.py  alerts.py  assets.py  auth.py  feedback.py  health.py  risk.py
backend/app/utils/: sanitize.py
backend/app/workers/: celery.py  tasks.py
backend/climate_risk_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: API.md  RUNBOOK.md
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  tsconfig.json
frontend/.next/: app-build-manifest.json  react-loadable-manifest.json  trace
frontend/.next/server/: app-paths-manifest.json  middleware-react-loadable-manifest.js  server-reference-manifest.json  webpack-runtime.js
frontend/.next/server/vendor-chunks/: @radix-ui.js  @swc.js  asynckit.js  axios.js  call-bind-apply-helpers.js  class-variance-authority.js  clsx.js  combined-stream.js  debug.js  delayed-stream.js  dequal.js  dunder-proto.js  es-define-property.js  es-errors.js  es-object-atoms.js  es-set-tostringtag.js  follow-redirects.js  form-data.js  function-bind.js  get-intrinsic.js  get-proto.js  gopd.js  has-flag.js  has-symbols.js  has-tostringtag.js  hasown.js  lucide-react.js  math-intrinsics.js  mime-db.js  mime-types.js  ms.js  next.js  proxy-from-env.js  supports-color.js  swr.js  tailwind-merge.js  use-sync-external-store.js
frontend/.next/static/chunks/: _app-pages-browser_components_MapCanvas_tsx.js  app-pages-internals.js  webpack.js
frontend/.next/static/css/: _app-pages-browser_components_MapCanvas_tsx.css
frontend/.next/static/webpack/: 1884f0331f6fbca1.webpack.hot-update.json  777e27ea0c73b3cf.webpack.hot-update.json  _app-pages-browser_components_MapCanvas_tsx.0bfce547f1f50cb3.hot-update.js  _app-pages-browser_components_MapCanvas_tsx.190fdb3064e260ba.hot-update.js  _app-pages-browser_components_MapCanvas_tsx.3ea7e4a88611ecaa.hot-update.js  _app-pages-browser_components_MapCanvas_tsx.4b0270c2d22cda96.hot-update.js  _app-pages-browser_components_MapCanvas_tsx.7d186005bc2bd6b1.hot-update.js  _app-pages-browser_components_MapCanvas_tsx.9db380b8a56c33f3.hot-update.js  _app-pages-browser_components_MapCanvas_tsx.a62773a1a654acde.hot-update.js  _app-pages-browser_components_MapCanvas_tsx.b2653e7e5c2f956a.hot-update.js  _app-pages-browser_components_MapCanvas_tsx.b635862a2f773372.hot-update.js  _app-pages-browser_components_MapCanvas_tsx.b82607f2cbd35ec5.hot-update.js  _app-pages-browser_components_MapCanvas_tsx.c37cf5e10130c416.hot-update.js  _app-pages-browser_components_MapCanvas_tsx.c5d00824a8c51342.hot-update.js  _app-pages-browser_components_MapCanvas_tsx.e72206ded8428b51.hot-update.js  (+58 more)
frontend/app/: globals.css  layout.tsx  providers.tsx
frontend/app/(marketing)/: page.tsx
frontend/app/map/: page.tsx
frontend/components/: MapCanvas.tsx
frontend/types/: global.d.ts
infra/: docker-compose.yml  init.sql
ml/: requirements.txt  train_flood.py
ml/models/: ensemble_meta.py  smoke_seq.py  st_transformer_heat.py  tft_flood.py
ml/utils/: mlflow_logger.py
scripts/: build_tiles.py  check_ascii.sh  check_blocklist.sh  seed_demo_data.py
(+53 files in other folders)
